updated informations to usage and the details of the procedure to make the installer packages